# specto

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  buildit.sh  cleanit.sh  conanfile.txt  run_mel_example.sh  run_spectogram_example.sh  runexample.sh  testit.sh
example/mel_filter_bands_graph/src/: main.cc  ui.cc  ui.h
example/src/: main.cc  time_bar.cc  time_bar.h  ui.cc  ui.h
inc/: fft.h  sdl_drawer.h  specto.h  spectogram.h
inc/specto/: mel_filter_bands.h  spectogram.h
src/: fft.cc  fft.h  hanning.cc  hanning.h  matrix.cc  matrix.h  mel.cc  mel.h  mel_convert.h  mel_filter_bands_impl.cc  mel_filter_bands_impl.h  mel_filter_banks.cc  mel_filter_banks.h  sdl_drawer.cc  specto.cc  spectogram.cc  spectogram_impl.cc  spectogram_impl.h
test/: main.cc
test/src/: fft_test.cc  hanning_test.cc  main.cc  matrix_test.cc  mel_conversion_test.cc  mel_filter_banks_test.cc  mel_test.cc  spectogram_test.cc
